# opsagent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  landing.html  pyproject.toml  railway.toml  requirements.txt
api/: index.py
data/demo/: logistica_normal.csv  manufactura_critica.csv
data/sample/: logistica_q1.csv  manufactura_enero.csv
scripts/: generar_datos_demo.py
src/: sample_data.csv
src/opsagent/: __init__.py  app.py  config.py  graph.py  models.py  state.py
src/opsagent/agents/: __init__.py  analysis.py  ingestion.py  recommendations.py
src/opsagent/api/: __init__.py  main.py  routes.py  schemas.py
src/opsagent/auth/: dependencies.py  login.py
src/opsagent/db/: models.py  repository.py  session.py
src/opsagent/frontend/: __init__.py  app.py
src/opsagent/prompts/: __init__.py  system_prompts.py
src/opsagent/reports/: generator.py
src/opsagent/tools/: __init__.py  analysis_tools.py  data_tools.py
tests/: __init__.py  conftest.py  test_graph.py
tests/test_agents/: __init__.py  test_analysis.py  test_ingestion.py  test_recommendations.py
tests/test_api/: test_routes.py
tests/test_auth/: test_dependencies.py
tests/test_db/: test_repository.py
tests/test_reports/: test_generator.py
tests/test_tools/: test_analysis_tools.py  test_data_tools.py
